[project]
name = "ttsmapi"
version = "0.1.0"
description = "Python client for TTS.Monster API"
authors = [
    {name = "cdr",email = "58159483+cdrg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ttsmapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
